[gd_scene load_steps=5 format=3 uid="uid://da23m08ml50op"]

[ext_resource type="Script" uid="uid://cyry0di35umy7" path="res://ui/options_menu.gd" id="1_6vtbd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbkqv"]
bg_color = Color(0.462291, 0.462291, 0.46229, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m3s5d"]
font_size = 12
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibk6l"]
bg_color = Color(0.347817, 0.347817, 0.347817, 1)
border_width_left = 32
border_width_top = 128
border_width_right = 32
border_width_bottom = 128
border_color = Color(0.8, 0.8, 0.8, 0.913725)

[node name="OptionsMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -41.0
offset_right = 62.0
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_6vtbd")

[node name="Options" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="Spacer" type="Control" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
text = "Options Menu"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="MarginContainer" type="MarginContainer" parent="Options"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Options/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Options" type="VBoxContainer" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ConfigureKeybindsButton" type="Button" parent="Options/MarginContainer/VBoxContainer/Options"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Configure Keybinds"

[node name="ShowTooltips" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/ShowTooltips"]
layout_mode = 2
text = "Show tooltips in game"

[node name="ShowTooltipsToggle" type="CheckButton" parent="Options/MarginContainer/VBoxContainer/Options/ShowTooltips"]
unique_name_in_owner = true
layout_mode = 2

[node name="ShowHUD" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/ShowHUD"]
layout_mode = 2
text = "Show HUD in game"

[node name="ShowHUDToggle" type="CheckButton" parent="Options/MarginContainer/VBoxContainer/Options/ShowHUD"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true

[node name="ShowTrajectory" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/ShowTrajectory"]
layout_mode = 2
text = "Preview Trajectory"

[node name="ShowTrajectoryToggle" type="CheckButton" parent="Options/MarginContainer/VBoxContainer/Options/ShowTrajectory"]
unique_name_in_owner = true
layout_mode = 2

[node name="VolumeSliders" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options"]
layout_mode = 2

[node name="Labels" type="VBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders"]
layout_mode = 2

[node name="Music" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Labels"]
layout_mode = 2
text = "Music Level"

[node name="SFX" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Labels"]
layout_mode = 2
text = "Sound Effects"

[node name="Speech" type="Label" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Labels"]
layout_mode = 2
text = "Announcer"

[node name="Sliders" type="VBoxContainer" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeSlider" type="HSlider" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
tick_count = 11
ticks_on_borders = true

[node name="SFXVolumeSlider" type="HSlider" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
tick_count = 11
ticks_on_borders = true

[node name="SpeechVolumeSlider" type="HSlider" parent="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
tick_count = 11
ticks_on_borders = true

[node name="ConfirmButtons" type="HBoxContainer" parent="Options/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Apply" type="Button" parent="Options/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Apply"

[node name="Cancel" type="Button" parent="Options/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Cancel"

[node name="Keybinds" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sbkqv")

[node name="VBoxContainer" type="VBoxContainer" parent="Keybinds"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2

[node name="Control" type="Control" parent="Keybinds/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Label" type="Label" parent="Keybinds/VBoxContainer"]
layout_mode = 2
text = "Configure Keybinds"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="Keybinds/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="MarginContainer" type="MarginContainer" parent="Keybinds/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Keybinds/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeybindLabels" type="VBoxContainer" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="KeybindGlyphs" type="VBoxContainer" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ScrollContainer/HBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmButtons" type="HBoxContainer" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmChanges" type="Button" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Confirm Changes"

[node name="Cancel" type="Button" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Cancel"

[node name="Spacer" type="Control" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Reset" type="Button" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons"]
layout_mode = 2
text = "Reset All"

[node name="REMOVE_ME" type="Label" parent="Keybinds/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "This menu is not yet functional. :)"
label_settings = SubResource("LabelSettings_m3s5d")
horizontal_alignment = 1

[node name="KeybindChanging" type="PanelContainer" parent="Keybinds"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ibk6l")

[node name="VBoxContainer" type="VBoxContainer" parent="Keybinds/KeybindChanging"]
layout_mode = 2

[node name="Spacer" type="Control" parent="Keybinds/KeybindChanging/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Label" type="Label" parent="Keybinds/KeybindChanging/VBoxContainer"]
layout_mode = 2
text = "Change Keybind"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="Keybinds/KeybindChanging/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Keybinds/KeybindChanging/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="KeybindChangingLabel" type="Label" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Action"

[node name="Label" type="Label" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "will be assigned to"

[node name="KeybindChangingGlyph" type="Label" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Glyph"

[node name="Spacer2" type="Control" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="PressAKey" type="Label" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Press any key to change assignment..."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Apply" type="Button" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Apply"

[node name="Spacer" type="Control" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Cancel" type="Button" parent="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/Options/ConfigureKeybindsButton" to="." method="_on_configure_keybinds_button_pressed"]
[connection signal="drag_ended" from="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="drag_ended" from="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="drag_ended" from="Options/MarginContainer/VBoxContainer/Options/VolumeSliders/Sliders/SpeechVolumeSlider" to="." method="_on_speech_volume_slider_drag_ended"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/ConfirmButtons/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="Options/MarginContainer/VBoxContainer/ConfirmButtons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons/ConfirmChanges" to="." method="_on_keybinds_confirm_changes_pressed"]
[connection signal="pressed" from="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons/Cancel" to="." method="_on_keybinds_cancel_pressed"]
[connection signal="pressed" from="Keybinds/VBoxContainer/MarginContainer/VBoxContainer/ConfirmButtons/Reset" to="." method="_on_keybinds_reset_all_pressed"]
[connection signal="pressed" from="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer/Buttons/Apply" to="." method="_on_keybind_changing_apply_pressed"]
[connection signal="pressed" from="Keybinds/KeybindChanging/VBoxContainer/MarginContainer/VBoxContainer/Buttons/Cancel" to="." method="_on_keybind_changing_cancel_pressed"]
